# workshop_airflow

./: pyproject.toml
exemplo_03/: exemplo_03.py  requirements.txt
exemplo_04/: primeira_dag_com_python_operator.py  quarta_dag_com_python_operator.py  quinta_dag_com_python_operator.py  segunda_dag_com_python_operator.py  terceira_dag_com_python_operator.py
exemplo_05/: pegar_um_personagem.py  pegar_um_personagem_airflow.py
exemplo_06/: controller.py  db.py  main.py
